add BaseSystem, Simulation, and skeleton of LotkaVolterraSystem

--- a/setup.cfg
+++ b/setup.cfg
@@ -16,6 +16,8 @@ package_dir =
     = src
 packages = find:
 python_requires = >=3.8
+install_requires =
+    pandas
 
 [options.packages.find]
 where = src
