--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,8 +1,10 @@
 [tool.poetry]
 name = "solsim"
-version = "0.1.2"
+version = "0.1.3"
 description = "The Solana complex systems simulator."
 authors = ["Will Wolf <williamabrwolf@gmail.com>"]
+readme = "README.md"
+repository = "https://github.com/cavaunpeu/solsim"
 license = "MIT"
 
 [tool.poetry.dependencies]
