--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -97,10 +97,10 @@ jobs:
       - name: Run tests
         run: poetry run pytest tests/test_${{ matrix.node }}.py
 
-  all_good:
+  success:
     # https://github.community/t/is-it-possible-to-require-all-github-actions-tasks-to-pass-without-enumerating-them/117957/4?u=graingert
     runs-on: ubuntu-latest
-    needs: tests
+    needs: run
     steps:
     - name: note that all tests succeeded
       run: echo "🎉"
