--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -22,6 +22,8 @@ jobs:
     steps:
       - name: Checkout repo.
         uses: actions/checkout@v2
+        with:
+          submodules: 'recursive'
 
       - name: Cache Solana Tool Suite
         uses: actions/cache@v2
@@ -50,7 +52,7 @@ jobs:
         with:
           node-version: '17'
 
-      - name: install Anchor CLI
+      - name: Install Anchor CLI
         run: npm install -g @project-serum/anchor-cli
 
       - name: Generate local keypair
@@ -97,7 +99,7 @@ jobs:
       - name: Run tests
         run: poetry run pytest tests/test_${{ matrix.node }}.py
 
-  success:
+  Success:
     # https://github.community/t/is-it-possible-to-require-all-github-actions-tasks-to-pass-without-enumerating-them/117957/4?u=graingert
     runs-on: ubuntu-latest
     needs: run
