--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ tqdm = "^4.62.3"
 pytest = "^6.2.5"
 black = "^21.12b0"
 mypy = "^0.931"
+pytest-asyncio = "^0.17.2"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
