--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ black = "^21.12b0"
 mypy = "^0.931"
 pytest-asyncio = "^0.17.2"
 pytest-mock = "^3.6.1"
+flake8 = "^4.0.1"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
