add Lint workflow with black, mypy, flake8 steps

--- a/mypy.ini
+++ b/mypy.ini
@@ -8,3 +8,12 @@ ignore_missing_imports = True
 
 [mypy-psutil]
 ignore_missing_imports = True
+
+[mypy-solana.*]
+ignore_missing_imports = True
+
+[mypy-anchorpy]
+ignore_missing_imports = True
+
+[mypy-spl.*]
+ignore_missing_imports = True
