--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -10,7 +10,7 @@ env:
   anchor_version: 0.19.0
 
 jobs:
-  run:
+  Test:
     runs-on: ubuntu-latest
     strategy:
       matrix:
@@ -20,7 +20,7 @@ jobs:
             'system'
           ]
     steps:
-      - name: Checkout repo.
+      - name: Checkout repo
         uses: actions/checkout@v2
         with:
           submodules: 'recursive'
@@ -102,7 +102,7 @@ jobs:
   Success:
     # https://github.community/t/is-it-possible-to-require-all-github-actions-tasks-to-pass-without-enumerating-them/117957/4?u=graingert
     runs-on: ubuntu-latest
-    needs: run
+    needs: Test
     steps:
     - name: note that all tests succeeded
       run: echo "🎉"
