--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,9 @@ mypy = "^0.931"
 pytest-asyncio = "^0.17.2"
 pytest-mock = "^3.6.1"
 flake8 = "^4.0.1"
+mkdocs = "^1.2.3"
+mkdocs-material = "^8.1.8"
+mkdocstrings = "^0.17.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
