start streamlit app of simulation results programmatically

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ anchorpy = "^0.6.4"
 pandas = "^1.4.0"
 numpy = "^1.22.1"
 tqdm = "^4.62.3"
+streamlit = "^1.5.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.2.5"
