--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ pandas = "^1.4.0"
 numpy = "^1.22.1"
 tqdm = "^4.62.3"
 streamlit = "^1.5.0"
+feather-format = "^0.4.1"
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.2.5"
