add tests for simulation

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -17,7 +17,8 @@ jobs:
         node:
           [
             'examples',
-            'system'
+            'system',
+            'simulation'
           ]
     steps:
       - name: Checkout repo
