--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -100,7 +100,7 @@ jobs:
       - name: Run tests
         run: poetry run pytest tests/test_${{ matrix.node }}.py -m "not uses_solana_localnet"
 
-  Success:
+  Tests Ran Successfully:
     # https://github.community/t/is-it-possible-to-require-all-github-actions-tasks-to-pass-without-enumerating-them/117957/4?u=graingert
     runs-on: ubuntu-latest
     needs: Test
